Better colab handling code + explicit instructions

--- a/myointeract_ui.ipynb
+++ b/myointeract_ui.ipynb
@@ -1,180 +1,201 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "3c065f6e",
-   "metadata": {},
-   "source": [
-    "# 🔧 Setup\n",
-    "\n",
-    "<div style=\"background-color:#fff3cd; padding:12px; border-left:5px solid #ffa502;\">\n",
-    "Run the next two cells to manage setup and imports.\n",
-    "</div>\n"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "3c065f6e",
+      "metadata": {},
+      "source": [
+        "# 🔧 Setup\n",
+        "\n",
+        "<div style=\"background-color:#fff3cd; padding:12px; border-left:5px solid #ffa502;\">\n",
+        "Run the next two cells to manage setup and imports.\n",
+        "</div>\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "26940c70",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import sys\n",
+        "import subprocess\n",
+        "\n",
+        "try:\n",
+        "    import google.colab\n",
+        "\n",
+        "    print(\"Running in Google Colab\")\n",
+        "\n",
+        "    repo_url = \"https://github.com/MyoInteract/MyoInteract.git\"\n",
+        "    repo_dir = \"MyoInteract\"\n",
+        "\n",
+        "    original_dir = os.getcwd()\n",
+        "\n",
+        "    # Clone only if not present\n",
+        "    if not os.path.exists(repo_dir):\n",
+        "        print(\"Cloning MyoInteract...\")\n",
+        "        subprocess.check_call([\"git\", \"clone\", repo_url])\n",
+        "    else:\n",
+        "        print(\"MyoInteract already exists — skipping clone\")\n",
+        "\n",
+        "    # Install editable\n",
+        "    os.chdir(repo_dir)\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-e\", \".\"])\n",
+        "\n",
+        "    # Return to original directory\n",
+        "    os.chdir(original_dir)\n",
+        "\n",
+        "    print(\"Installation complete ✅\")\n",
+        "\n",
+        "except ImportError:\n",
+        "    print(\"Not running in Google Colab — assuming local environment.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ff623877",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "os.environ[\"XLA_PYTHON_CLIENT_PREALLOCATE\"] = \"false\"\n",
+        "os.environ[\"MUJOCO_GL\"] = \"egl\"\n",
+        "xla_flags = os.environ.get('XLA_FLAGS', '')\n",
+        "xla_flags += ' --xla_gpu_triton_gemm_any=True'\n",
+        "os.environ['XLA_FLAGS'] = xla_flags"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9196bd7d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import wandb\n",
+        "from myosuite.envs.myo.myouser.hydra_cli import load_config_interactive\n",
+        "from myosuite.envs.myo.myouser.train_jax_ppo import train\n",
+        "from myosuite.envs.myo.myouser.gradio_ui import get_ui, RunState"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "948f706f",
+      "metadata": {},
+      "source": [
+        "# 📈 Initialise wandb tracking\n",
+        "\n",
+        "<div style=\"background-color:#ffebee; padding:12px; border-left:5px solid #c62828;\">An API key must be provided.</div>\n",
+        "\n",
+        "You can find your API key in your [wandb account settings](https://wandb.ai/authorize), or set the `WANDB_API_KEY` environment variable before running the cell below.\n",
+        "\n",
+        "If you don't have a wandb account yet, see the [quickstart guide](https://docs.wandb.ai/models/quickstart) for instructions. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6a518684",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# An API key must be provided (via prompt below or WANDB_API_KEY env var)\n",
+        "wandb.login()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c9ca6567",
+      "metadata": {},
+      "source": [
+        "#### Set the name of your wandb project (optional)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5f8435d3",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Override this to your own chosen value if preferred!\n",
+        "project_name = \"myointeract_testing\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "62834292",
+      "metadata": {},
+      "source": [
+        "## 🖥️ Launch Gradio UI\n",
+        "\n",
+        "<div style=\"background-color:#eef6ff; padding:12px; border-left:5px solid #4a90e2;\">\n",
+        "\n",
+        "Run the next cell to start the Gradio interface and wait for it to load.\n",
+        "\n",
+        "<b>Important:</b> Do not run any subsequent cells until you are satisfied with the configuration and have pressed the <b>Run</b> button.\n",
+        "\n",
+        "A URL will appear in the cell output which you can use to access the GUI.\n",
+        "\n",
+        "</div>\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "70d3d63b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "state = RunState()\n",
+        "demo = get_ui(project_name, state)\n",
+        "demo.launch(share=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "3eab0e9e",
+      "metadata": {},
+      "source": [
+        "# 🚀 Start training\n",
+        "\n",
+        "Run the next cell to start training. Results will automatically be logged to wandb!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d9013282",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cfg = load_config_interactive(state.cfg_overrides, cfg_only=True)\n",
+        "train(cfg)"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "myointeract_env",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.14"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26940c70",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import subprocess\n",
-    "import sys\n",
-    "\n",
-    "try:\n",
-    "    import google.colab\n",
-    "    print(\"In Google Colab, installing MyoInteract...\")\n",
-    "\n",
-    "    subprocess.check_call([\n",
-    "        sys.executable, \"-m\", \"pip\", \"install\",\n",
-    "        \"git+https://github.com/MyoInteract/MyoInteract.git\"\n",
-    "    ])\n",
-    "\n",
-    "    print(\"Installation complete\")\n",
-    "\n",
-    "except ImportError:\n",
-    "    print(\"Not running in Google Colab — assuming local environment.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff623877",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ[\"XLA_PYTHON_CLIENT_PREALLOCATE\"] = \"false\"\n",
-    "os.environ[\"MUJOCO_GL\"] = \"egl\"\n",
-    "xla_flags = os.environ.get('XLA_FLAGS', '')\n",
-    "xla_flags += ' --xla_gpu_triton_gemm_any=True'\n",
-    "os.environ['XLA_FLAGS'] = xla_flags"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9196bd7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import wandb\n",
-    "from myosuite.envs.myo.myouser.hydra_cli import load_config_interactive\n",
-    "from myosuite.envs.myo.myouser.train_jax_ppo import train\n",
-    "from myosuite.envs.myo.myouser.gradio_ui import get_ui, RunState"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "948f706f",
-   "metadata": {},
-   "source": [
-    "# 📈 Initialise wandb tracking\n",
-    "\n",
-    "Please refer to this URL [https://docs.wandb.ai/models/quickstart] for instructions on creating your wandb account if you don't have one. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a518684",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wandb.login()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9ca6567",
-   "metadata": {},
-   "source": [
-    "#### Set the name of your wandb project (optional)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f8435d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Override this to your own chosen value if preferred!\n",
-    "project_name = \"myointeract_testing\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62834292",
-   "metadata": {},
-   "source": [
-    "## 🖥️ Launch Gradio UI\n",
-    "\n",
-    "<div style=\"background-color:#eef6ff; padding:12px; border-left:5px solid #4a90e2;\">\n",
-    "\n",
-    "Run the next cell to start the Gradio interface and wait for it to load.\n",
-    "\n",
-    "<b>Important:</b> Do not run any subsequent cells until you are satisfied with the configuration and have pressed the <b>Run</b> button.\n",
-    "\n",
-    "A URL will appear in the cell output which you can use to access the GUI.\n",
-    "\n",
-    "</div>\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70d3d63b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state = RunState()\n",
-    "demo = get_ui(project_name, state)\n",
-    "demo.launch(share=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3eab0e9e",
-   "metadata": {},
-   "source": [
-    "# 🚀 Start training\n",
-    "\n",
-    "Run the next cell to start training. Results will automatically be logged to wandb!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9013282",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cfg = load_config_interactive(state.cfg_overrides, cfg_only=True)\n",
-    "train(cfg)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "myointeract_env",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.14"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
